--- a/src/index.scss
+++ b/src/index.scss
@@ -1,22 +1,26 @@
 body {
-  background: red;
   display: flex;
   height: 100vh;
+  background: red;
 }
 
 .autoplacement-example {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr;
 }
 
-html, body {
-  background: linear-gradient(#e98a00, #f5aa2f);
+html,
+body {
   display: flex;
   height: 100%;
-  height: 0;
   margin: 0;
+  background: linear-gradient(#e98a00, #f5aa2f);
 }
 
-.foo { flex: 1; }
+.foo {
+  @include mixins.a;
+
+  flex: 1;
+}
